# e-imzo-manager

./: .gitattributes  .gitignore  Cargo.toml  Flatpak.md  README.md  ]  default.nix  e-imzo-manager.default.nix  e-imzo-manager.nix  flake.nix  justfile  meson.build  module.nix  package.nix  shell.nix
.github/archive/: .gitignore  default.nix  flake.nix  module.nix  shell.nix
.github/archive/helper/: default.nix
.github/workflows/: release-test.yml  release.yml  release.yml~  test.yml
archive/: default.nix
archive/helper/: e-helper.sh
archive/mails/: answer-proposal.md
assets/: README.txt
build-aux/: com.belmoussaoui.GtkRustTemplate.Devel.json  dist-vendor.sh  org.xinux.EIMZOManager.Devel.json  org.xinux.EIMZOManager.Devel.json~  org.xinux.EIMZOManager.json  uz.xinux.EIMZOManager.Devel.json  uz.xinux.EIMZOManager.Devel.json~  uz.xinux.EIMZOManager.json  uz.xinux.EIMZOManager.json~
crates/eimzo/: Cargo.toml
crates/eimzo/src/: lib.rs
data/: meson.build  org.xinux.EIMZOManager.desktop.in.in  org.xinux.EIMZOManager.gschema.xml.in  org.xinux.EIMZOManager.metainfo.xml.in.in  org.xinux.EIMZOManager.policy.in.in  uz.xinux.EIMZOManager.desktop.in.in  uz.xinux.EIMZOManager.gschema.xml.in  uz.xinux.EIMZOManager.metainfo.xml.in.in  uz.xinux.EIMZOManager.policy.in.in
data/resources/: meson.build  resources.gresource.xml  style.css
e-helper/: Cargo.toml
e-helper/src/: main.rs  meson.build
helper/: e-helper.sh
mails/: answer-proposal.md  proposal.md
po/: LINGUAS  POTFILES.in  ja.po  messages.pot  ru.po  tg.po  translations.pot  uz.po
shells/e-imzo-manager/: default.nix
src/: app.rs  config.rs  config.rs.in  dashboard.rs  main.rs  meson.build  navigation_splitview_with_stack.rs  utils.rs  welcome.rs  window.rs
src/modals/: about.rs  awesome.rs  content.rs  document.rs  localhost.rs  mod.rs  toggler.rs
src/pages/: dashboard.rs  mod.rs  modes.rs  select_mode.rs  welcome.rs
src/ui/: about.rs  alert.rs  awesome.rs  localhost.rs  macros.rs  mod.rs  select_mode.rs  shortcuts.rs  welcome.rs  window.rs
