[package]
name = "E-IMZO-Manager"
version = "1.1.0"
edition = "2024"
license = "AGPL-3.0"
description = "E-IMZO for uzbek state web key signing on Linux"
homepage = "https://github.com/xinux-org"
repository = "https://github.com/xinux-org/e-imzo-manager"
authors = ["Xinux Developers <support@oss.uzinfocom.uz>"]
readme = "README.md"

# Optimize release binary as much as possible
[profile.release]
lto = true
codegen-units = 1
incremental = true
strip = true
opt-level = "z"

[profile.dev]
opt-level = 1
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
relm4 = { version = "0.10.0", features = ["libadwaita", "gnome_48"] }
relm4-components = "0.10.0"
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_8"] }
tracing = "0.1.44"

tracing-subscriber = { version = "0.3.22", default-features = false, features = [
  "fmt",
] }
tokio = { version = "1.49.0", default-features = false, features = [
  "process",
  "time",
] }
gio = "0.21.5"
e-imzo = "0.2.5"

[workspace]
members = [".", "e-helper"]
default-members = [".", "e-helper"]
