[package]
name = "e-imzo-manager"
version = "1.2.0"
edition = "2024"
license = "AGPL-3.0"
description = "E-IMZO for uzbek state web key signing on Linux"
homepage = "https://github.com/xinux-org"
repository = "https://github.com/xinux-org/e-imzo-manager"
authors = ["Xinux Developers <support@oss.uzinfocom.uz>"]
readme = "README.md"

# Optimize release binary as much as possible
[profile.release]
codegen-units = 16
lto = "thin"
incremental = true

[profile.dev]
opt-level = 1
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
relm4 = { version = "0.11.0", features = ["libadwaita", "gnome_49"] }
relm4-components = "0.11.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
  "fmt",
] }
tokio = { version = "1.49.0", default-features = false, features = [
  "process",
  "time",
] }
e-imzo = "0.3.0"
uzers = "0.12.2"
